--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@ var/
 .installed.cfg
 *.egg
 
+# mac stuff
+.DS_Store
+
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -62,3 +66,6 @@ target/
 
 # Solutions/Flag
 *.csv
+
+# ignore cred lines
+*.credentials   
